--- a/CodeSwitching/Assembly-CSharp.csproj
+++ b/CodeSwitching/Assembly-CSharp.csproj
@@ -60,6 +60,8 @@
      <Compile Include="Assets\script\Stroop\StroopManager.cs" />
      <Compile Include="Assets\script\Stroop\StroopPlay.cs" />
      <Compile Include="Assets\script\UserManager.cs" />
+     <Compile Include="Assets\script\WordListScript.cs" />
+     <Compile Include="Assets\script\Wordlist.cs" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
